# pyPlugy

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/pyplugy/: __init__.py  _context.py  _depgraph.py  _discovery.py  _manager.py  _plugin.py  _task_info.py  _tasky_protocol.py  exceptions.py
tests/: conftest.py  test_async_lifecycle.py  test_context_class.py  test_context_hooks.py  test_context_tasks.py  test_dependencies.py  test_dependencies_extended.py  test_discovery_directory.py  test_discovery_entry_points.py  test_discovery_jit.py  test_integration_pytasky.py  test_integration_pyworkflowy.py  test_lifecycle.py  test_manager.py  test_phase2.py  test_plugin_class.py  test_plugin_decorator.py  test_sugar.py  test_task_auto_wire.py  test_update_config.py
tests/fixtures/: plugin_async.py  plugin_broken.py  plugin_simple.py  plugin_with_deps.py
