[project]
name = "pyplugy"
version = "0.1.0"
description = "Plugin framework with hooks (pyHooky) and tasks (pyWorkflowy)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "KilianSen" }]
keywords = ["plugins", "framework", "hooks", "tasks", "extension"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyhooky>=0.1.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
tasks = ["pyworkflowy>=0.1.0"]

[project.urls]
Homepage = "https://github.com/kiliansen/pyPlugy"
Issues = "https://github.com/kiliansen/pyPlugy/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyplugy"]

[tool.hatch.build.targets.sdist]
include = ["src/pyplugy", "README.md", "LICENSE", "pyproject.toml"]


[tool.uv.sources]
pyhooky = { path = "../pyHooky" }
pyworkflowy = { path = "../pyWorkflowy" }


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"


[tool.coverage.run]
source = ["src/pyplugy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]


[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    # PEP 695 generic syntax doesn't play well with @overload chains
    "UP046",  # generic class via Generic[T]
    "UP047",  # generic function via TypeVar
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]


[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.11"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
build_command = "pip install uv && uv build"
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.branches.master]
match = "master"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^chore\\(release\\):"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyrefly>=0.16",
]
